Sun Sep  5 23:02:34 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_owned_p): Pathname#owned?
	  translated from pathname.rb.

Sat Sep  4 23:48:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_readlink): symlink target should be in
	  filesystem encoding.

Sat Sep  4 10:40:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (ruby_init_ext): export for golfers.

	* vm_core.h (rb_iseq_eval, rb_iseq_compile_with_option): ditto.

Sun May 23 17:29:41 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (capi): uses a timestamp file to get rid of 
	  generating twice.

Fri Jun 18 01:33:21 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* enc/Makefile.in (realclean): has been missing. necessary
	  for make realclean-enc.

Fri Sep  3 23:51:26 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_socket_p): Pathname#socket?
	  translated from pathname.rb.

Fri Sep  3 06:40:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/pty/pty.c (chfunc): pass through exceptions.

	* io.c (rb_io_bufwrite, rb_io_bufread): added.

	* process.c (rb_fork_err): protect from exceptions.

Fri Sep  3 06:16:07 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_pipe_p): Pathname#pipe?
	  translated from pathname.rb.

Fri Sep  3 06:14:40 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/pty/pty.c (chfunc): restore errno from SystemCallError and
	  propagate proper exception to the parent.  [ruby-dev:41965]

Thu Sep  2 22:10:38 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_file_p): Pathname#file?
	  translated from pathname.rb.

Thu Sep  2 09:12:02 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_spawn, rb_w32_aspawn): don't forget to free
	  memory.

Thu Sep  2 09:01:13 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (CreateChild): unicodize.

	* win32/win32.c (rb_w32_spawn, rb_w32_aspawn): convert arguments of
	  CreateChild() from ACP to WideChar.
