@@ -697,6 +697,15 @@ path_owned_p(VALUE self)
 }
 
 /*
+ * See <tt>FileTest.readable?</tt>.
+ */
+static VALUE
+path_readable_p(VALUE self)
+{
+    return rb_funcall(rb_mFileTest, rb_intern("readable?"), 1, get_strpath(self));
+}
+
+/*
  * == Pathname
  *
  * Pathname represents a pathname which locates a file in a filesystem.
@@ -936,4 +945,5 @@ Init_pathname()
     rb_define_method(rb_cPathname, "pipe?", path_pipe_p, 0);
     rb_define_method(rb_cPathname, "socket?", path_socket_p, 0);
     rb_define_method(rb_cPathname, "owned?", path_owned_p, 0);
+    rb_define_method(rb_cPathname, "readable?", path_readable_p, 0);
 }
