@@ -1,3 +1,8 @@
+Mon Sep  6 06:17:21 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/pathname/pathname.c (path_readable_p): Pathname#readable?
+	  translated from pathname.rb.
+
 Sun Sep  5 23:02:34 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/pathname/pathname.c (path_owned_p): Pathname#owned?
